# nuclex-flac

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  config.h  nuclex-flac (msvc-14.2).vcxproj  nuclex-flac (msvc-14.2).vcxproj.filters
